--- a/src/ks/components/KsModal/styles/modal.scss
+++ b/src/ks/components/KsModal/styles/modal.scss
@@ -16,15 +16,12 @@ $close-size: 32px;                                                      // å…³é—
 }
 
 @include b(KSModal) {
-  position: fixed!important;
   margin: 6px auto; width: $width;
-  box-shadow: 0 0 9px #B3B3B3; border-radius: 2px;
-  background: #FFF;
+  background: #FFF; border-radius: 3px;
+  box-shadow: 0 0 7px rgba(0, 0, 0, 0.2);
+  position: relative; z-index: 19941026;
 
   @include center-translate();
-  @include e(wrapper) {
-    position: relative; z-index: 19941026;
-  }
 
   // header
   @include e(header) {
