--- a/src/doc/styles/components/footer.scss
+++ b/src/doc/styles/components/footer.scss
@@ -9,7 +9,7 @@
 
 #footer {
   position: fixed;bottom: 0;left: $menu-width;right: 0;
-  height: $footer-height;padding: 0 20px;
+  height: $footer-height;padding: 0 20px; z-index: 7;
   line-height: $footer-height;font-size: 13px;color: #9a9a9a;
   background: #FAFAFA;border-top: 1px solid #E9E9E9;
 
