--- a/src/ks/components/KsPager/styles/paging.scss
+++ b/src/ks/components/KsPager/styles/paging.scss
@@ -1,5 +1,5 @@
-@import '../../../styles/base/ref/index';
-@import '../../../styles/base/neat';
+@import '../../styles/base/ref/index';
+@import '../../styles/base/neat';
 
 %paging{
 	li{
