--- a/src/ks/components/KsDater/styles/date.scss
+++ b/src/ks/components/KsDater/styles/date.scss
@@ -1,6 +1,6 @@
-@import '../../../styles/base/creater/index';
-@import '../../../styles/base/ref/index';
-@import '../../../styles/common/icon-input';
+@import '../../styles/base/creater/index';
+@import '../../styles/base/ref/index';
+@import '../../styles/common/icon-input';
 
 // week样式
 %date-week{
