--- a/src/ks/components/styles/base/neat.scss
+++ b/src/ks/components/styles/base/neat.scss
@@ -109,7 +109,7 @@ button, input, select, textarea {
   -ms-text-autospace: ideograph-alpha ideograph-numeric ideograph-parenthesis;
   /* 5 */
   text-spacing: ideograph-alpha ideograph-numeric ideograph-parenthesis;
-  /* 5 */
+  /* 5 **/
 }
 
 /**
