--- a/src/ks/components/styles/components/dialog-content.scss
+++ b/src/ks/components/styles/components/dialog-content.scss
@@ -1,61 +1,63 @@
-// %dialog
-@import '../common/dialog';
-
-// 内容彈框
-%dialog-txt{
-	@extend %dialog;
-	width: 500px;
-	.KsDialogBg-title{
-    	padding: 20px 20px 0;
-    	position: relative;
-    	h2{ padding-bottom: 20px; }
-    	_close{
-    		cursor: pointer;
-    		position: absolute;
-    		right: 20px;
-    		top: 35px;
-    		display: inline-block;
-		    width: 20px;
-		    line-height: 20px;
-		    text-align: center;
-		    i{ font-size: 12px; }
-    	}
+.full{width:100%;}
+    .checkboxall{
+        margin-right: 0px;
+        margin-left: 0px;
+        padding: 0px 15px;
+        background: #fff;
+        line-height: 40px;
+        input[type=checkbox]{
+            width:18px;
+            height: 18px;
+            vertical-align:middle;
+            margin-top:-3px;
+        }
     }
-    .KsDialogBg-content{ padding: 20px; }
-	.KsDialogBg-operation{
-    	text-align: right;
-    	padding: 20px;
+    .checkboxwhole {
+        border: 1px solid #efefef;
+        margin-right: 0px;
+        margin-left: 0px;
+        padding: 0px 15px;
+        background: #fff;
+    }
+    .whole {
+        border-top: 1px dashed #efefef;
+        line-height: 40px;
+
+        &:first-child {
+            border-top: 0px;
+        }
+    }
+
+.store-select{
+    padding:10px;
+    .radiofir{position: relative;}
+    .p-l10{padding-left: 10px}
+
+    .store_pos{
+        position:absolute;
+        top:40px;
+        left:0;
+        right:0;
+        z-index: 10;
+        overflow:scroll;
+    }
+    .iconup{
+      position: absolute;
+      right:10px;
+      top:15px;
+      border-left:6px solid transparent;
+      border-right:6px solid transparent;
+      border-top: 7px solid #bfcbd9;
+      transition:all 0.5s;
+    }
+    .icondown{
+      position: absolute;
+      right:10px;
+      top:15px;
+      border-left:6px solid transparent;
+      border-right:6px solid transparent;
+      border-top: 7px solid #bfcbd9;
+      transform:rotate(180deg);
+      transition:all 0.5s;
     }
 }
-%dialog-bg{
-	@extend %dialog-txt;
-	.KsDialogBg-title{
-		background: #f44336;
-		h2,i{ color: #fff; }
-	}
-}
-
-/* 默认 */
-.KsDialogBg-default{
-	@extend %dialog-txt;
-	.KsDialogBg-title{
-		h2{ border-bottom: 1px solid #e0e0e0; }
-		_close{
-		    &:hover{
-		    	background: #f44336;
-		    	border-radius: 50%;
-		    	padding: 3px;
-		    	i{ color: #fff; }
-		    }
-		    &:active{ background: #e53935; }
-		}
-	}
-}
-/* 红色 */ /* 蓝色 */ /* 绿色 */ /* 橙色 */
-$dialog-bg:(danger,#f44336),(primary,#2196f3),(success,#4caf50),(warning,#ff5722);
-@each $type, $background in $dialog-bg{
-	.KsDialogBg-#{$type}{
-		@extend %dialog-bg;
-		.KsDialogBg-title{ background: $background; }
-	}
-} 
