--- a/src/ks/components/KsDialogChoose/styles/KsDialogChoose.scss
+++ b/src/ks/components/KsDialogChoose/styles/KsDialogChoose.scss
@@ -1,3 +1,6 @@
+@import "../../styles/sassMagic/_sassMagic";
+@import "../../styles/variables";
+
 %store-select {
     .radiofir{
       position: relative;
