--- a/src/ks/components/KsDropChoose/styles/Store.scss
+++ b/src/ks/components/KsDropChoose/styles/Store.scss
@@ -2,13 +2,12 @@
   padding:10px;
     .radiofir{position: relative;}
     .p-l10{padding-left: 10px}
-    .store_pos{
+    .KsStore{
         position:absolute;
         top:40px;
         left:0;
         right:0;
         z-index: 10;
-        overflow:scroll;
     }
     .iconup{
       position: absolute;
@@ -30,10 +29,12 @@
       transition:all 0.5s;
     }
 }
-.KsStoreClick{
-    @extend %store-select;
-    input{outline:none}
+
+%KsStore{
     .full{width:100%;}
+    .perstore{
+         border: 1px solid #efefef;
+    }
     .checkboxall{
         margin-right: 0px;
         margin-left: 0px;
@@ -49,7 +50,6 @@
         }
     }
     .checkboxwhole {
-        border: 1px solid #efefef;
         margin-right: 0px;
         margin-left: 0px;
         padding: 0px 15px;
@@ -63,5 +63,16 @@
             border-top: 0px;
         }
     }
+}
 
+.KsStoreClick{
+    @extend %store-select;
+    input{outline:none}
+    @extend %KsStore;
+
+}
+
+.KsStore{
+     @extend %KsStore;
+     overflow:scroll;
 }
