--- a/src/ks/components/KsFloorSelect/styles/Floor.scss
+++ b/src/ks/components/KsFloorSelect/styles/Floor.scss
@@ -5,10 +5,9 @@
     border:0;
     background: none;
     padding:8px;
-    width:100%;
     box-sizing:border-box;
-    height: 36px;
   }
+  .full{width:100%}
   .turnright{
     width:40px;
     text-align: center;
@@ -57,46 +56,49 @@
     transform:rotate(-225deg);
     transition:all 0.2s;
   }
-  .floorleft {
-    position:relative;
-  }
-  ul{
-    position:absolute;
-    top:36px;
-    left:-1px;
-    border: 1px solid #C8C8C8;
-    border-radius: 2px;
-    max-height: 367px;
-    overflow-y: scroll;
-    z-index:2;
-    background-color:#fff;
-    li{
-      line-height: 36px;
-      text-align: center;
-      width:120px;
-      span{
-        font-family: PingFangSC-Regular;
-        font-size: 13px;
-        color: #444444;
-      }
-      &:hover{
-        background-color:#F5F5F5;
-        cursor: pointer;
-      }
-      &.check{
-        background-color:#2196F3;
-        span{
-          color:#fff;
-        }
-      }
-      &.disabled{
-        background-color:#000;
-        opacity:0.2;
-        cursor: not-allowed;
-        span{
-          color:#fff;
-        }
-      }
-    }
-  }
+  @extend .KsItem;
+
 }
+.KsItem{
+    position:relative; 
+    ul{
+        position:absolute;
+        top:36px;
+        left:-1px;
+        border: 1px solid #C8C8C8;
+        border-radius: 2px;
+        max-height: 367px;
+        overflow-y: scroll;
+        z-index:2;
+        background-color:#fff;
+        li{
+            line-height: 36px;
+            text-align: center;
+            width:120px;
+            span{
+                font-family: PingFangSC-Regular;
+                font-size: 13px;
+                color: #444444;
+            }
+            &:hover{
+                background-color:#F5F5F5;
+                cursor: pointer;
+            }
+            &.check{
+                background-color:#2196F3;
+                span{
+                  color:#fff;
+                }
+            }
+            &.disabled{
+                background-color:#000;
+                opacity:0.2;
+                cursor: not-allowed;
+                span{
+                  color:#fff;
+                }
+            }
+        }
+    }
+}
+
