--- a/src/ks/components/KsDialogChoose/styles/KsDialogChoose.scss
+++ b/src/ks/components/KsDialogChoose/styles/KsDialogChoose.scss
@@ -39,6 +39,10 @@
           line-height: 13px;
           cursor: pointer;
         }
+        .errortxt{
+          float: left;
+          color:red;
+        }
         
     }
     ul {
