--- a/src/ks/components/KsImage/styles/Image.scss
+++ b/src/ks/components/KsImage/styles/Image.scss
@@ -1,10 +1,18 @@
 .ks-image-box{
 	position: fixed;
-    top: 54px;
-    left: 54px;
-    right: 54px;
-    bottom: 54px;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     background: rgba(0,0,0,0.5);
+    .image-content{
+		position: fixed;
+	    top: 54px;
+	    left: 54px;
+	    right: 54px;
+	    bottom: 54px;
+	    background: #444;
+    }
     img{
     	max-width: 100%;
     	max-height: 100%;
@@ -22,8 +30,11 @@
 	    text-align: center;
 	    line-height: 54px;
 	    color:#fff;
-	    background: rgba(0,0,0,0.5);
+	    background: rgba(0,0,0,0.25);
 	    font-size: 33px;
 	    cursor: pointer;
+	    border-radius: 2px;
+	    &:hover{ background: #f44336; }
+	    &:active{ background: darken(#f44336,10%); }
     }
 }
