--- a/src/ks/components/KsImage/styles/Image.scss
+++ b/src/ks/components/KsImage/styles/Image.scss
@@ -5,6 +5,7 @@
     right: 0;
     bottom: 0;
     background: rgba(0,0,0,0.5);
+    z-index: 100;
     .image-content{
 		position: fixed;
 	    top: 54px;
