--- a/src/ks/components/KsSearch/styles/Search.scss
+++ b/src/ks/components/KsSearch/styles/Search.scss
@@ -2,7 +2,9 @@
     position: relative;
     width: 100%;
     z-index: 999;
+    // display: table;
     input {
+        @extend %input;
         width: 100%;
     }
     .SearchIcon {
@@ -14,7 +16,7 @@
         background: #fcfcfc;
         border-top-right-radius: 3px;
         border-bottom-right-radius: 3px;
-        padding: 8px 8px 8px 10px;
+        padding: 6px 8px 6px 10px;
         &:hover {
             background: #f6f6f6;
         }
@@ -50,58 +52,24 @@
     }
 }
 
-
-// .fuzzy_wrapper {
-//         position: relative;
-//         width: 100%;
-//         z-index: 999;
-// }
-// .fuzzy_wrapper > input {
-//     width: 100%;
-// }
-// .search_icon {
-//     position: absolute;
-//     top: 1px;
-//     right: 1px;
-//     font-size: 16px;
-//     color: #444;
-//     background: #fcfcfc;
-//     border-top-right-radius: 3px;
-//     border-bottom-right-radius: 3px;
-//     padding: 8px 8px 8px 10px;
-// }
-
-// .search_icon:hover {
-//     background: #f6f6f6;
-// }
-// .search_icon:active {
-//     background: #e8e8e8;
-// }
-
-
-// .fuzzy_box {
-//     position: absolute;
-//     top: 33px;
-//     left: 0;
-//     width: 100%;
-//     box-sizing: border-box;
-// }
-// ul.result_list {
-//     max-height: 250px;
-//     width: 100%;
-//     box-sizing: border-box;
-//     border: 1px solid #00bcd4;
-//     border-radius: 3px;
-//     overflow-y: scroll;
-// }
-// ul.result_list li {
-//     background: #fff;
-//     cursor: pointer;
-//     height: 25px;
-//     line-height: 25px;
-//     padding-left: 10px;
-// }
-// ul.result_list li:hover {
-//     color: #fff;
-//     background: #00bcd4;
-// }
+%input {
+    font-family: PingFang SC, Arial, "苹方", "微软雅黑";
+    padding: 0 10px;
+    height: 35px;
+    font-size: 13px;
+    color: #444444;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #c8c8c8;
+    border-radius: 3px;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, -webkit-box-shadow ease-in-out .15s;
+    -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    box-sizing: border-box;
+    &:focus {
+        border-color: #00BCD4;
+        outline: 0;
+    }
+}
