--- a/src/ks/components/KsPager/styles/paging.scss
+++ b/src/ks/components/KsPager/styles/paging.scss
@@ -3,7 +3,8 @@
 %paging{
 	li{
 		display: inline-block;
-		width: 36px;
+		min-width: 16px;
+		padding: 0 10px;
 		height: 36px;
     	line-height: 36px;
 		text-align: center;
