--- a/src/doc/styles/app.scss
+++ b/src/doc/styles/app.scss
@@ -20,7 +20,7 @@ html, body {
 .router-wrap {
   font-size: 13px;
 
-  ul {
+  .markdown-ul {
     padding: 0 0 10px 30px;
     list-style-type: circle;
 
