--- a/src/ks/components/KsDialogChoose/styles/KsDialogChoose.scss
+++ b/src/ks/components/KsDialogChoose/styles/KsDialogChoose.scss
@@ -1,5 +1,6 @@
-@import "../../styles/sassMagic/_sassMagic";
-@import "../../styles/variables";
+@import '../../styles/base/creater/index';
+@import '../../styles/base/ref/index';
+@import '../../styles/common/icon-input';
 
 %store-select {
     .radiofir{
@@ -17,6 +18,33 @@
         overflow:scroll;
     }
 }
+%KsList{
+  ul {
+        overflow:hidden;
+        margin-top: 20px;
+        li{
+            margin-right: 10px;
+            margin-bottom: 20px;
+            float:left;
+            cursor: pointer;
+            span{
+                padding:5px 10px;
+                background-color: #f5f5f5;
+                display: block;
+                border-radius:2px;
+                border: 1px solid #f5f5f5;
+            }
+            &.check{
+                span{
+                  color:#2196F3;
+                  background: #FFFFFF;
+                  border: 1px solid #2196F3;
+                }
+            }
+        }
+    }
+}
+
 .KsDialogChoose{
     @extend %store-select;
     .txtr{text-align:right}
@@ -43,30 +71,12 @@
           float: left;
           color:red;
         }
-        
+
     }
-    ul {
-        overflow:hidden;
-        margin-top: 20px;
-        li{
-            margin-right: 10px;
-            margin-bottom: 20px;
-            float:left;
-            cursor: pointer;
-            span{
-                padding:5px 10px;
-                background-color: #f5f5f5;
-                display: block;
-                border-radius:2px;
-                border: 1px solid #f5f5f5;
-            }
-            &.check{
-                span{
-                  color:#2196F3;
-                  background: #FFFFFF;
-                  border: 1px solid #2196F3;
-                }
-            }
-        }
-    }
+
+    @extend %KsList;
+    
+}
+.KsList{
+  @extend %KsList;
 }
