--- a/src/ks/components/KsTable/styles/table.scss
+++ b/src/ks/components/KsTable/styles/table.scss
@@ -34,3 +34,37 @@
     }
     & tbody tr:nth-of-type(odd) { background-color: #fcfcfc; }
 }
+
+
+
+.VueTables__sort-icon {
+  margin-left: 10px;
+}
+
+.VueTables__dropdown-pagination {
+  margin-left: 10px;
+}
+
+.VueTables__highlight {
+  background: yellow;
+  font-weight: normal;
+}
+
+.VueTables__sortable {
+  cursor: pointer;
+}
+
+.VueTables__date-filter {
+  border: 1px solid #ccc;
+  padding: 6px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.VueTables__filter-placeholder {
+  color: #aaa;
+}
+
+.VueTables__list-filter {
+  width: 120px;
+}
