--- a/src/ks/components/KsCheckbox/styles/abstract.scss
+++ b/src/ks/components/KsCheckbox/styles/abstract.scss
@@ -1,7 +1,6 @@
-/**
- * @description KSCheckbox 组件.
- * @author pkeros
- * @data 2017/4/13
- * @email pkeros@vip.qq.com
- */
-
+//
+// @description this files description.
+// @author pkeros
+// @data 2017/4/20
+// @email pkeros@vip.qq.com
+//
