- 修改了 `KsIcon` `ks` 字体库的样式 class 前缀。

--- a/src/ks/components/KsIcon/styles/index.css
+++ b/src/ks/components/KsIcon/styles/index.css
@@ -15,7 +15,7 @@
   url('../fonts/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
 }
 
-.ks-icon {
+.icon {
   font: normal normal normal 14px/1 KsIonts;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
