--- a/src/ks/components/styles/components/input.scss
+++ b/src/ks/components/styles/components/input.scss
@@ -1,4 +1,4 @@
-%input {
+%input-unit {
 	font-family: PingFang SC,Arial,"苹方","微软雅黑";
     display: inline-block;
     padding: 0 10px;
@@ -23,39 +23,39 @@
 
 
 
-.input-xl{
-	@extend %input;
+%input-xl{
+	@extend %input-unit;
 	height: 40px;
 	line-height: 40px;
 	font-size: 18px;
 }
-.input-l{
-	@extend %input;
+%input-l{
+	@extend %input-unit;
 	height: 38px;
 	line-height: 38px;
 	font-size: 16px;
 }
-.input{
-	@extend %input;
+%input{
+	@extend %input-unit;
 	height: 34px;
 	line-height: 34px;
 	font-size: 13px;
 }
 
-.input-s{
-	@extend %input;
+%input-s{
+	@extend %input-unit;
 	height: 32px;
 	line-height: 32px;
 	font-size: 13px;
 }
-.input-xs{
-	@extend %input;
+%input-xs{
+	@extend %input-unit;
 	height: 30px;
 	line-height: 30px;
 	font-size: 12px;
 }
 
-.input-min {
-    @extend %input;
+%input-min {
+    @extend %input-unit;
     width:60px;
 }
