--- a/src/ks/components/KsIcon/styles/icons.scss
+++ b/src/ks/components/KsIcon/styles/icons.scss
@@ -5,6 +5,7 @@
 // @email pkeros@vip.qq.com
 */
 
+
 .icon-nanrentouxiang:before { content: "\e651"; }
 
 .icon-xiajiantou:before { content: "\e622"; }
@@ -217,6 +218,10 @@
 
 .icon-buzoupen:before { content: "\e665"; }
 
+.icon-xiangshangjiantou:before { content: "\e669"; }
+
+.icon-xiangxiajiantou:before { content: "\e66a"; }
+
 .icon-biaogegengduoneirongico:before { content: "\e6c0"; }
 
 .icon-quanxiancaozuoico:before { content: "\e6c1"; }
@@ -234,3 +239,4 @@
 .icon-bumen:before { content: "\e6d0"; }
 
 .icon-daqu:before { content: "\e6d1"; }
+
