FED-103 文档版本、组件版本驻留

--- a/src/ks/components/KsDater/v1.0.0/styles/date.scss
+++ b/src/ks/components/KsDater/v1.0.0/styles/date.scss
@@ -1,6 +1,6 @@
-@import '../../../styles/base/creater/index';
-@import '../../../styles/base/ref/index';
-@import '../../../styles/common/icon-input';
+@import '~KsComponents/styles/base/creater/index';
+@import '~KsComponents/styles/base/ref/index';
+@import '~KsComponents/styles/common/icon-input';
 
 // week样式
 %date-week{
