版本处理 ，组件优化

--- a/src/ks/components/KsImage/v1.0.1/styles/Img.scss
+++ b/src/ks/components/KsImage/v1.0.1/styles/Img.scss
@@ -85,7 +85,9 @@
       -webkit-transform:scale(1.2);
     }
  }
-
+.ovh{
+  overflow: hidden;
+}
 
 .star-transition,.stal-transition {
     -webkit-transition:all 0.5s ease;
