--- a/src/ks/components/styles/base/font/index.scss
+++ b/src/ks/components/styles/base/font/index.scss
@@ -1,5 +1,6 @@
 // .iconfont
-@import "./font-icon/iconfont";
+// font-icon 远程字体资源
+// @import "./font-icon/iconfont";
 
 @import '../ref/variables';
 
