--- a/src/ks/components/KsTabs/v0.1.0/styles/tabs.scss
+++ b/src/ks/components/KsTabs/v0.1.0/styles/tabs.scss
@@ -38,6 +38,7 @@
         border-right:1px solid #e9e9e9;   
         border-left:1px solid #e9e9e9;
         margin-right: 10px;
+        cursor: pointer;
         
         &.active ,&.disable {
             border-color: #d9d9d9;
