add version for KsSearch component

--- a/src/ks/components/KsSearch/v1.0.0/styles/Search.scss
+++ b/src/ks/components/KsSearch/v1.0.0/styles/Search.scss
@@ -6,6 +6,7 @@
     input {
         @extend %input;
         width: 100%;
+        padding-right: 32px!important;
     }
     .SearchIcon {
         position: absolute;
