--- a/src/ks/components/KsCheckbox/v0.1.0/source/checkbox.scss
+++ b/src/ks/components/KsCheckbox/v0.1.0/source/checkbox.scss
@@ -1,17 +1,16 @@
 // @description 一个复选框样式
 // @author zdzDesigner
 @import '~KsComponents/styles/base/index';
-// 主色调
-$primary-color: nth($primarys,2);
-// 选择框大小
-$skin_size: 16px;                                               
+$primary-color: #00A5E0;                                        // 主色调
+$skin-size: 18px;                                               // 选择框大小
 
 .KsCheckbox {
   position: relative;
-  width: $skin_size; height: $skin_size;
+  border: 1px solid #D0D0D5; border-radius: 3px;
+  width: $skin-size; height: $skin-size;
   text-align: center; 
   // cursor: pointer;
-  &.ib {vertical-align: middle; }
+  vertical-align: middle; 
   &.disabled {
     opacity: .6;
     * { cursor: not-allowed }
@@ -25,6 +24,9 @@ $skin_size: 16px;
   width: 100%;height: 100%;
   opacity: 0;
   // checked 下的选择框样式
+  &:checked + .KsCheckbox-cube{
+    opacity: 1;
+  }
   &[disabled] {
     opacity: 0;
   }
@@ -34,22 +36,12 @@ $skin_size: 16px;
 // 选择点的样式
 .KsCheckbox-cube {
   position: absolute;top: 50%;
-  color:#ccc;
-  border-radius: 2px;
-  background: #fff;
+  height: $skin-size / 1.8; width: $skin-size / 1.8;
+  border-radius: 3px;
+  background-color: $primary-color;
+  opacity: 0;
   transition: opacity .3s;
   transform: translateX(-50%) translateY(-50%);
-  height: $skin_size;
-  width: $skin_size;
-  line-height: $skin_size + 2;
   
-}
-.KsCheckbox-cube-checked {
-  color:$primary-color;
-  background: #fff;
-}
-.KsCheckbox-cube-disabled {
-  color:#ccc;
-  background: #eee;
 }
 
